fix: hide horizontal overflow

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -22,6 +22,7 @@
 
 html,
 body {
+  overflow-x: hidden:
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
